--- a/test/fixtures/order_items.yml
+++ b/test/fixtures/order_items.yml
@@ -1,13 +1,13 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  product_id: 
-  quantity: 1
-  price: 9.99
-  order_id: 
+  product: raspberry_pi_2
+  quantity: 2
+  price: 39.95
+  order: george_local_pickup
 
 two:
-  product_id: 
+  product: arduino_uno
   quantity: 1
-  price: 9.99
-  order_id: 
+  price: 29.95
+  order: george_usps_firstclass
