--- a/test/fixtures/categories.yml
+++ b/test/fixtures/categories.yml
@@ -1,9 +1,40 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-one:
-  name: MyString
-  category_id: 
+arduino:
+  name: Arduino
 
-two:
-  name: MyString
-  category_id: 
+rapberry_pi:
+  name: Raspberry Pi
+
+development_tools:
+  name: Development Tools
+
+arduino_shields:
+  name: Shields
+
+arduino_boards:
+  name: Boards
+
+arduino_others:
+  name: Other
+
+components:
+  name: Components
+
+avr_microcontrollers:
+  name: AVR Microcontrollers
+
+pic_microcontrollers:
+  name: Pic Microcontrollers
+
+leds:
+  name: LEDs
+
+10mm_leds:
+  name: 10mm
+
+5mm_leds:
+  name: 5mm
+
+3mm_leds:
+  name: 3mm
