--- a/test/fixtures/products.yml
+++ b/test/fixtures/products.yml
@@ -1,13 +1,21 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-one:
-  name: MyString
-  price: 9.99
-  description: MyText
-  stock: 1
+arduino_uno:
+  name: Arduino Uno Board
+  price: 24.95
+  description: >
+                Arduino is popular development platform. Arduino Uno is a board
+                to use with arduino.
+  stock: 10
+  categories: arduino_boards
+  weight: 100
 
-two:
-  name: MyString
-  price: 9.99
-  description: MyText
-  stock: 1
+raspberry_pi_2:
+  name: Raspberry Pi 2
+  price: 39.95
+  description: >
+                Raspberry pi is a credit card sized development platform.
+                Raspberry pi 2 is the second version of this popular platform.
+  stock: 14
+  categories: raspberry_pi
+  weight: 150
