--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -1,7 +1,13 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-one:
-  name: MyString
+george:
+  name: 'George'
+  email: 'george@example.com'
+  encrypted_password: <%= Devise::Encryptor.digest User, '123456' %>
+  confirmed_at: <%= Date.today %>
 
-two:
-  name: MyString
+allan:
+  name: 'Allan'
+  email: 'allan@example.com'
+  encrypted_password: <%= Devise::Encryptor.digest User, '654321' %>
+  confirmed_at: <%= Date.today %>
